fixed: fiels upload/download. everything done. OPTIONAL TODO: add file attachment status to collapsed todo list item

--- a/src/index.css
+++ b/src/index.css
@@ -187,7 +187,7 @@ input:focus{
   border: 2px solid rgba(251, 255, 180, 0.5);
   border-radius: 10px;
   position: relative;
-  margin: 1% 0% 8% 0%;
+  margin: 1% 0% 9% 0%;
   color: white;
   background-size: 0%;
 }
